# phyto-node

./: .gitignore  .gitmodules  AD7124-defs_8h.html  AD7124-defs_8h.js  AD7124-defs_8h__dep__incl.map  AD7124-defs_8h__dep__incl.md5  AD7124-defs_8h__incl.map  AD7124-defs_8h__incl.md5  AD7124-defs_8h_source.html  AD7124_8cpp.html  AD7124_8cpp.js  AD7124_8cpp__incl.map  AD7124_8cpp__incl.md5  AD7124_8h.html  AD7124_8h__dep__incl.map  AD7124_8h__dep__incl.md5  AD7124_8h__incl.map  AD7124_8h__incl.md5  AD7124_8h_source.html  CMakeLists.txt  Conversion_8cpp.html  Conversion_8cpp.js  Conversion_8cpp__incl.map  Conversion_8cpp__incl.md5  Conversion_8h.html  Conversion_8h.js  Conversion_8h__dep__incl.map  Conversion_8h__dep__incl.md5  Conversion_8h__incl.map  Conversion_8h__incl.md5  Conversion_8h_source.html  Doxyfile  MbedStatsWrapper_8cpp.html  MbedStatsWrapper_8cpp.js  MbedStatsWrapper_8cpp__incl.map  MbedStatsWrapper_8cpp__incl.md5  MbedStatsWrapper_8h.html  MbedStatsWrapper_8h.js  MbedStatsWrapper_8h_source.html  README.md  (+205 more)
.github/workflows/: doxygen.yml
docs/configs/: Doxyfile
docs/output/latex/: AD7124-defs_8h.tex  AD7124-defs_8h__dep__incl.md5  AD7124-defs_8h__incl.md5  AD7124_8cpp.tex  AD7124_8cpp__incl.md5  (+72 more)
include/: README.md
include/adc/: AD7124-defs.h  AD7124.h
include/interfaces/: ReadingQueue.h
include/serial_mail_sender/: SerialMailGenerated.h  SerialMailSender.h  serial_mail.fbs
include/utils/: Conversion.h  utils.h
models/softmax/: model_pte.h
search/: all_0.js  all_1.js  all_10.js  all_11.js  all_12.js  all_13.js  all_14.js  all_15.js  all_16.js  all_17.js  all_18.js  all_19.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_2.js  classes_3.js  classes_4.js  defines_0.js  defines_1.js  defines_2.js  defines_3.js  defines_4.js  defines_5.js  defines_6.js  defines_7.js  defines_8.js  (+52 more)
src/: README.md  main.cpp
src/adc/: AD7124.cpp
src/interfaces/: ReadingQueue.cpp
src/model_executor/: ModelExecutor.cpp
src/serial_mail_sender/: SerialMailSender.cpp
